# fundamental-bias-alerts

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: hourly-bias-alerts.yml  morning-brief.yml
configs/: default.json  locked.json  release_calendar.usd_q2_2026.json
docs/: deploy.render.md  spec.md
docs/decisions/: ADR-001-data-sources-and-validation.md  ADR-002-day-trade-playbook-layer.md
examples/: bias_snapshots.sample.jsonl  hourly_prices.sample.csv
fundamental_bias_alerts/: __init__.py  alerts.py  cli.py  config.py  engine.py  fred.py  journal.py  market_data.py  models.py  paper_trades.py  playbook.py  release_calendar.py  snapshots.py  telegram.py  validation.py
scripts/: day-trade-playbook.ps1  register-hourly-task.ps1  run-paper-hourly.ps1  validate-paper-study.ps1
storage/.state/: alert_state.json  paper_trade_journal.jsonl  paper_trade_ledger.jsonl
tests/: test_alerts.py  test_cli.py  test_config.py  test_engine.py  test_fred.py  test_market_data.py  test_paper_trades.py  test_playbook.py  test_snapshots.py  test_telegram.py  test_validation.py
