[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamental-bias-alerts"
version = "0.4.0"
description = "Automated hourly fundamentals-only bias alerts for major FX, gold, and BTC instruments."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[tool.setuptools]
packages = ["fundamental_bias_alerts"]
